Add logos and placeholder images

--- a/_posts/events/2018-09-01-event-1.md
+++ b/_posts/events/2018-09-01-event-1.md
@@ -2,9 +2,9 @@
 layout: news-article
 title: Upcoming Social Event!
 meta: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit lamet tolk amel yut…
-source: 
+source:
 category: events
-prevImage: https://placehold.it/400x400
+prevImage: 3-gens.jpg
 ---
 
 Have have learned some cool stuff that'll make life way easier! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
