Update posts layout and data management

--- a/_posts/events/2018-09-01-event-1.md
+++ b/_posts/events/2018-09-01-event-1.md
@@ -4,7 +4,7 @@ title: Upcoming Social Event!
 meta: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit lamet tolk amel yut…
 source:
 category: events
-prevImage: reno-front-sq.jpg
+banImage: /images/uploads/reno-front.jpg
 ---
 
 Have have learned some cool stuff that'll make life way easier! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
