--- a/_posts/news/2018-08-01-news-1.md
+++ b/_posts/news/2018-08-01-news-1.md
@@ -4,7 +4,7 @@ title: New Website!
 meta: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit lamet tolk amel yut…
 source:
 category: news
-prevImage: 3-gens-sq.jpg
+banImage: /images/uploads/3-gens.jpg
 ---
 
 Started an awesome new job at a marketing firm! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
