--- a/_posts/events/2018-09-01-event-1.md
+++ b/_posts/events/2018-09-01-event-1.md
@@ -5,6 +5,10 @@ meta: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit lamet tolk am
 source:
 category: events
 banImage: /images/uploads/reno-front.jpg
+eventDate: December 15, 2018
+eventTime: 7:00pm
+eventLocation: 14 Industrial Dr
+eventLocationLink: https://www.google.ca/maps/place/The+Hub/@45.2250478,-76.196212,17z/data=!3m1!4b1!4m5!3m4!1s0x4cd21a859830ee41:0xb830458897d9b93d!8m2!3d45.225044!4d-76.194018?shorturl=1
 ---
 
 Have have learned some cool stuff that'll make life way easier! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
