--- a/_posts/news/2018-08-01-news-1.md
+++ b/_posts/news/2018-08-01-news-1.md
@@ -4,6 +4,7 @@ title: New Website!
 meta: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit lamet tolk amel yut…
 source:
 category: news
+banner: true
 banImage: /images/uploads/3-gens.jpg
 ---
 
