Fix banner generation error

--- a/_posts/events/2018-09-01-event-1.md
+++ b/_posts/events/2018-09-01-event-1.md
@@ -10,7 +10,7 @@ eventTime: '7:00pm'
 eventLocation: 14 Industrial Dr
 eventLocationLink: >-
   https://www.google.ca/maps/place/The+Hub/@45.2250478,-76.196212,17z/data=!3m1!4b1!4m5!3m4!1s0x4cd21a859830ee41:0xb830458897d9b93d!8m2!3d45.225044!4d-76.194018?shorturl=1
-banner: true
+pbanner: 'true'
 banImage: /images/uploads/reno-front.jpg
 ---
 
