--- a/_posts/events/2018-11-27-bake-sale.md
+++ b/_posts/events/2018-11-27-bake-sale.md
@@ -3,7 +3,7 @@ layout: news-article
 category: events
 title: Bake Sale
 meta: Community bake sale coming up to raise money for Rebound!
-pbanner: 'true'
+banner: 'true'
 banImage: /images/uploads/20th-anniversary-founders-tea.jpg
 eventDate: December 15, 2018
 eventTime: 7:00pm
